--- a/linux/curl/111.md
+++ b/linux/curl/111.md
@@ -1,4 +1,13 @@
+---
+typora-root-url: ../../assets
+---
 
 
-![image-20191018103420128](../../assets/image-20191018103420128.png)
 
+
+
+![](/assets/image-20191018104542985.png)
+
+![](/assets/image-20191018104901806.png)
+
+![image-20191018105753498](/image-20191018105753498.png)
