--- a/linux/curl/111.md
+++ b/linux/curl/111.md
@@ -1,5 +1,5 @@
 ---
-typora-root-url: ../../assets
+Typora-root-url:""
 ---
 
 
@@ -11,3 +11,8 @@ typora-root-url: ../../assets
 ![](/assets/image-20191018104901806.png)
 
 ![image-20191018105753498](/image-20191018105753498.png)
+
+
+
+Ff 
+
