--- a/Java虚拟机/垃圾收集器与内存分配策略.md
+++ b/Java虚拟机/垃圾收集器与内存分配策略.md
@@ -143,6 +143,10 @@ public class FinalizeEscapeGC {
 
 ### 标记-复制算法（复制算法）
 
+<a name="myfootnote1">1</a>: Footnote content goes here
+
+[test][]
+
 为了解决标记-清除算法面对大量可回收对象时执行效率低的问题。
 
 现在的商用Java虚拟机大多都优先采用了这种收集算法去回收新生代
@@ -159,5 +163,10 @@ public class FinalizeEscapeGC {
 
 具体做法是把新生代分为一块较大的Eden空间和两块较小的Survivor空间，每次分配内存只使用Eden和其中一块Survivor。发生垃圾搜集时，将Eden和Survivor中仍然存活的对象一次性复制到另外一块Survivor空间上，然后直接清理掉Eden和已用过的那块Survivor空间。HotSpot虚拟机默认Eden和Survivor的大小比例是8∶1，也即每次新生代中可用内存空间为整个新生代容量的90%（Eden的80%加上一个Survivor的10%），只有一个Survivor空间，即10%的新生代是会被“浪费”的。当然，98%的对象可被回收仅仅是“普通场景”下测得的数据，任何人都没有办法百分百保证每次回收都只有不多于10%的对象存活，因此Appel式回收还有一个充当罕见情况的“逃生门”的安全设计，当Survivor空间不足以容纳一次Minor GC之后存活的对象时，就需要依赖其他内存区域（实际上大多就是老年代）进行分配担保（Handle Promotion）。
 
+<sup>[1](#myfootnote1)</sup>
+
 [^分配担保]: 内存的分配担保好比我们去银行借款，如果我们信誉很好，在98%的情况下都能按时偿还，于是银行可能会默认我们下一次也能按时按量地偿还贷款，只需要有一个担保人能保证如果我不能还款时，可以从他的账户扣钱，那银行就认为没有什么风险了。内存的分配担保也一样，如果另外一块Survivor空间没有足够空间存放上一次新生代收集下来的存活对象，这些对象便将通过分配担保机制直接进入老年代，这对虚拟机来说就是安全的。
 
+
+
+[test]: 
