--- a/数据结构/数据结构.md
+++ b/数据结构/数据结构.md
@@ -1,4 +1,4 @@
-### 线性表
+## 线性表
 
 线性表是一个具有相同特性的数据元素的有限序列。
 
@@ -10,13 +10,26 @@
 
 线性表的逻辑表示为：
 
-- [ ] $$
-  （a_1,a_2,...,a_i,a_i+1,...,a_n）
-  $$
+$$
+（a_1,a_2,...,a_i,a_i+1,...,a_n）
+$$
 
 $a_i$（1≤i≤n）表示第i（i表示逻辑位序）个元素。
 $a_1$为表头元素 
 $a_n$为表尾元素
 
 
+
+## 单链表
+
+以建表算法为基础的算法设计
+
+- 尾插法
+- 头插法
+
+
+
+## 双链表
+
+## 循环链表
 
