--- a/Java虚拟机/垃圾收集器与内存分配策略.md
+++ b/Java虚拟机/垃圾收集器与内存分配策略.md
@@ -29,11 +29,119 @@
 
 分为强引用（Strongly Re-ference）、软引用（Soft Reference）、弱引用（Weak Reference）和虚引用（PhantomReference）4种，这4种引用强度依次逐渐减弱。
 
+#### 强引用-不回收（Strongly Reference）
+
 强引用是最传统的“引用”的定义，是指在程序代码之中普遍存在的引用赋值，即类似“Objectobj=new Object()”这种引用关系。无论任何情况下，只要强引用关系还存在，垃圾收集器就永远不会回收掉被引用的对象。
 
-软引用是用来描述一些还有用，但非必须的对象。只被软引用关联着的对象，在系统将要发生内存溢出异常前，会把这些对象列进回收范围之中进行第二次回收，如果这次回收还没有足够的内存，才会抛出内存溢出异常。在JDK 1.2版之后提供了SoftReference类来实现软引用。
+在Java程序中，最常见的引用类型是强引用(普通系统99%以上都是强引用)，也就是我们最常见的普通对象引用，也是默认的引用类型。
 
-弱引用也是用来描述那些非必须对象，但是它的强度比软引用更弱一些，被弱引用关联的对象只能生存到下一次垃圾收集发生为止。当垃圾收集器开始工作，无论当前内存是否足够，都会回收掉只被弱引用关联的对象。在JDK 1.2版之后提供了WeakReference类来实现弱引用。
+当在Java语言中使用new操作符创建一个新的对象， 并将其赋值给一个变量的时候， 这个变量就成为指向该对象的一个强引用。
+
+**强引用的对象是可触及的，垃圾收集器就永远不会回收掉被引用的对象。**
+
+对于一个普通的对象，如果没有其他的引用关系，只要超过了引用的作用域或者显式地将相应(强)引用赋值为null，就是可以当做垃圾被收集了，当然具体回收时机还是要看垃圾收集策略。相对的，软引用、 弱引用和虚引用的对象是软可触及、弱可触及和虚可触及的，在一定条件下，都是可以被回收的。所以，**强引用是造成Java内存泄漏的主要原因之一。**
+
+强引用例子：
+
+```java
+StringBuffer str = new StringBuffer("hello, ycf");
+```
+
+局部变量str指定StringBuffer实例所在堆空间，通过str可以操作该实例，那么str就是StringBuffer实例的强引用
+
+对应内存结构：
+
+![image-20210403191736068](../../../../Library/Application Support/typora-user-images/image-20210403191736068.png)
+
+#### 软引用-内存不足即回收（Soft Reference）
+
+软引用是用来描述一些还有用，但非必须的对象。**只被软引用关联着的对象，在系统将要发生内存溢出异常前，会把这些对象列进回收范围之中进行第二次回收**，如果这次回收还没有足够的内存，才会抛出内存溢出异常。
+
+软引用通常用来实现内存敏感的缓存。比如：高速缓存就有用到软引用。如果还有空闲内存，就可以暂时保留缓存，当内存不足时清理掉，这样就保证了使用缓存的同时，不会耗尽内存。
+
+垃圾回收器在某个时刻决定回收软可达的对象的时候，会清理软引用，并可选地把引用存放到一个引用队列( Reference Queue)。
+
+类似弱引用，只不过Java虚拟机会尽量让软引用的存活时间长一些，迫不得已才清理。
+
+在JDK 1.2版之后提供了SoftReference类来实现软引用。
+
+```java
+Object obj = new Object();	// 声明强引用
+SoftReference<Object> sf = new SoftReference<Object>();
+obj = null;	// 销毁强引用
+```
+
+```java
+/**
+	*	+Xms10m
+	*	+Xmx10m
+	*	
+	*
+	**/
+public static void main(String[] args) {
+  // 创建对象，建立软引用
+  //	SoftReference<Object> objSoftRef = new SoftReference<>(new Object());
+  // 上面的一行代码，等价于如下三行代码
+  Object obj = new Object();
+  SoftReference<Object> objSoftRef = new SoftReference<>(obj);
+  obj = null;	// 取消强引用
+  
+  // 从软引用中重新获取强引用对象
+  System.out.println(objSoftRef.get());
+  
+  System.gc();
+  System.out.println("After GC");
+  System.out.println(objSoftRef.get());	// 由于堆内存资源足够，不会回收软引用
+  //	垃圾回收之后获取软引用中的对象
+  try {
+    // 让系统认为内存资源紧张
+    byte[] b = new byte[1024 * 1024 * 7];
+  }	catch (Throwable e) {
+    e.printStackTrace();
+  } finally {
+    // 再次从软引用中获取数据
+    System.out.println(objSoftRef.get());	// 在报OOM中前，垃圾回收器会回收软引用的可达对象
+  }
+  
+}
+```
+
+#### 弱引用（Weak Reference）-发现即回收
+
+弱引用也是用来描述那些非必须对象，但是它的强度比软引用更弱一些，**只被弱引用关联的对象只能生存到下一次垃圾收集发生为止。**当垃圾收集器开始工作，无论当前内存是否足够，都会回收掉只被弱引用关联的对象。
+
+但是，由于垃圾回收器的线程通常优先级很低，因此，并不一定能很快地发现持有弱引用的对象。在这种情况下，**弱引用对象可以存在较长的时间。**
+
+弱引用和软引用一样，在构造弱引用时，也可以指定一个引用队列，当弱引用对象被回收时，就会加入指定的引用队列，通过这个队列可以跟踪对象的回收情况。
+
+**软引用、弱引用都非常适合来保存那些可有可无的缓存数据。**如果这么做，当系统内存不足时，这些缓存数据会被回收，不会导致内存溢出。而当内存资源充足时，这些缓存数据又可以存在相当长的时间，从而起到加速系统的作用。
+
+在JDK 1.2版之后提供了WeakReference类来实现弱引用。
+
+```java
+Object obj = new Object();	//	声明强引用
+WeakReference<Object> wr = new WeakReference<>(obj);
+obj = null;	//	销毁强引用
+```
+
+**弱引用对象与软引用对象的最大不同就在于**，当GC在进行回收时，需要通过算法检查是否回收软引用对象，而对于弱引用对象，GC总是进行回收。**弱引用对象更容易、更快被GC回收。**
+
+```java
+public static void main(String[] args) {
+ 		//	构造弱引用
+  	WeakRefence<Object> objWeakRef = new WeakRefence<>(new Object());
+  	//	从弱引用中重新获取对象
+  	System.out.println(objWeakRef.get());
+  
+  	System.gc();
+  	//	不管当前内存空间是否足够，都会回收它的内存
+  	System.out.println("After GC");
+  	// 	重新尝试从弱引用中获取对象
+  	System.out.println(objWeakRef.get());
+}
+```
+
+
 
 #### 虚引用-对象回收跟踪
 
@@ -43,9 +151,30 @@
 
 在JDK1.2版之后提供了PhantomReference类来实现虚引用。
 
+虚引用必须和引用队列一起使用。虚引用在创建时必须提供一一个引用队列作为参数。当垃圾回收器准备回收-一个对象时，如果发现它还有虚引用，就会在回收对象后，将这个虚引用加入引用队列，以通知应用程序对象的回收情况。
+
+**由于虚引用可以跟踪对象的回收时间，因此，也可以将--些资源释放操作放置在虚引用中执行和记录。**
+
+```java
+Ojbect obj = new Object();
+ReferenceQueue phantomQueue = new ReferenceQueue();
+PhantomReference<Object> pf = new PhantomReference<>(obj, phantomQueue);
+obj = null;
+```
 
 
 
+```java
+
+```
+
+### 终结器引用
+
+它用以实现对象的finalize()方法，也可以称为终结器引用。
+
+无需手动编码，其内部配合引用队列使用。
+
+在GC时，终结器引用入队。由Finalizer线程通过终结器引用找到被引用对象并调用它的finalize()方法，第二次GC时才能回收被引用对象。
 
 如果对象在进行可达性分析后发现没有与GC Roots相连接的引用链，那它将会被第一次标记，随后进行一次筛选，筛选的条件是此对象是否有必要执行finalize()方法。假如对象没有覆盖finalize()方法，或者finalize()方法已经被虚拟机调用过，那么虚拟机将这两种情况都视为“没有必要执行”。
 
