--- a/Java虚拟机/内存.md
+++ b/Java虚拟机/内存.md
@@ -2,9 +2,38 @@
 
 Java虚拟机在执行Java程序的过程中会把它所管理的内存划分为若干个不同的数据区域。这些区域有各自的用途，以及创建和销毁的时间，有的区域随着虚拟机进程的启动而一直存在，有些区域则是依赖用户线程的启动和结束而建立和销毁。
 
+线程是一个程序里的运行单元。JVM允许一个应用有多个线程并行的执行。
+
+在Hotspot JVM里， 每个线程都与操作系统的本地线程直接映射。
+➢当一个Java线程准备好执行以后，此时一个操作系统的本地线程也同时创建。Java线程执行终止后，本地线程也会回收。
+
+操作系统负责所有线程的安排调度到任何一个可用的CPU上。一旦本地线程初始化成功，它就会调用Java线程中的run()方法。
+
+#### JVM系统线程
+
+
+如果你使用jconsole或者是任何一一个调试工具，都能看到在后台有许多线程在运行。这些后台线程不包括调用public static void main (String[])的main线程以及所有这个main线程自己创建的线程。
+
+这些主要的后台系统线程在Hotspot JVM里主要是以下几个:
+
+➢`虚拟机线程`:这种线程的操作是需要JVM达到安全点才会出现。这些操作必须在不同的线程中发生的原因是他们都需要JVM达到安全点，这样堆才不会变化。这种线程的执行类型包括"stop-the-world"的垃圾收集，线程栈收集，线程挂起以及偏向锁撤销。
+
+➢`周期任务线程`:这种线程是时间周期事件的体现(比如中断)，他们一般用于周期性操作的调度执行。
+
+➢`GC线程`:这种线程对在JVM里不同种类的垃圾收集行为提供了支持。
+
+➢编译线程:这种线程在运行时会将字节码编译成到本地代码。
+
+➢`信号调度线程`:这种线程接收信号并发送给JVM，在它内部通过调用适当的方法进
+行处理。
+
 ![image-20200327154138532](https://raw.githubusercontent.com/mycf/it/master/assets/image-20200327154138532.png)
 
-### 程序计数器
+### 程序计数器(PC 寄存器)
+
+JVM中的程序计数寄存器( Program Counter Register)中，Register 的命名源于CPU的寄存器，寄存器存储指令相关的现场信息。CPU只有把数据装载到寄存器才能够运行。
+
+这里，并非是广义上所指的物理寄存器，或许将其翻译为Pc计数器(或指令计数器)会更加贴切(也称为程序钩子)，并且也不容易引起一些不必要的误会。JVM中 的PC寄存器是对物理PC寄存器的一种抽象模拟。
 
 程序计数器（Program Counter Register）是一块较小的内存空间，它可以看作是当前线程所执行的字节码的行号指示器。在Java虚拟机的概念模型里[插图]，字节码解释器工作时就是通过改变这个计数器的值来选取下一条需要执行的字节码指令，它是程序控制流的指示器，分支、循环、跳转、异常处理、线程恢复等基础功能都需要依赖这个计数器来完成。
 
@@ -16,7 +45,7 @@ Java虚拟机在执行Java程序的过程中会把它所管理的内存划分为
 
 ### Java虚拟机栈
 
-与程序计数器一样，Java虚拟机栈（Java Virtual Machine Stack）也是线程私有的，它的生命周期与线程相同。虚拟机栈描述的是Java方法执行的线程内存模型：每个方法被执行的时候，Java虚拟机都会同步创建一个栈帧[插图]（Stack Frame）用于存储局部变量表、操作数栈、动态连接、方法出口等信息。每一个方法被调用直至执行完毕的过程，就对应着一个栈帧在虚拟机栈中从入栈到出栈的过程。
+与程序计数器一样，Java虚拟机栈（Java Virtual Machine Stack）也是线程私有的，**它的生命周期与线程相同**。虚拟机栈描述的是Java方法执行的线程内存模型：每个方法被执行的时候，Java虚拟机都会同步创建一个栈帧（Stack Frame）用于存储局部变量表、操作数栈、动态连接、方法出口等信息。每一个方法被调用直至执行完毕的过程，就对应着一个栈帧在虚拟机栈中从入栈到出栈的过程。
 
 “栈”通常就是指讲的虚拟机栈，或者更多的情况下只是指虚拟机栈中局部变量表部分。
 
@@ -26,8 +55,250 @@ Java虚拟机在执行Java程序的过程中会把它所管理的内存划分为
 
 注意⚠️：在《Java虚拟机规范》中，对这个内存区域规定了两类异常状况：
 
-- 如果线程请求的栈深度大于虚拟机所允许的深度，将抛出StackOverflowError异常；
-- 如果Java虚拟机栈容量可以动态扩展，当栈扩展时无法申请到足够的内存会抛出OutOfMemoryError异常。
+​	Java虚拟机规范允许Java栈的大小是动态的或者是固定不变的。
+
+- 如果线程请求的栈深度大于虚拟机所允许的深度，将抛出`StackOverflowError`异常；
+
+  > 如果采用固定大小的Java虚拟机栈，那每一个线程的Java虚拟机栈容量可以在线程创建的时候独立选定。如果线程请求分配的栈容量超过Java虚拟机栈允许的最大容量，Java虚拟机将会抛出一个`stackOverflowError`异常。
+
+- 如果Java虚拟机栈容量可以动态扩展，当栈扩展时无法申请到足够的内存会抛出`OutOfMemoryError`异常。
+
+  > 如果Java虚拟机栈可以动态扩展，并且在尝试扩展的时候无法申请到足够的内存，或者在创建新的线程时没有足够的内存去创建对应的虚拟机栈，那Java虚拟机将会抛出一个`OutOfMemoryError` 异常。
+
+```java
+// 会出现`stackOverflowError`异常
+public static void main(String[] args) {
+  main(args);
+}
+```
+
+
+
+#### 栈的特点(优点)
+
+- 栈是一种快速有效的分配存储方式，访问速度仅次于程序计数器。
+- JVM直接对Java栈的操作只有两个:
+  ➢每个方法执行，伴随着进栈(入栈、压栈)
+  ➢执行结束后的出栈工作
+- 对于栈来说不存在垃圾回收问题
+
+##### 设置栈内存大小
+
+我们可以使用参数`-Xss` 选项来设置线程的最大栈空间，栈的大小直接决定了函数调用的最大可达深度。
+
+
+
+#### 栈中存储什么?
+
+- 每个线程都有自己的栈，栈中的数据都是以栈帧(Stack Frame)的格式存在。
+- 在这个线程上正在执行的每个方法都各自对应一个栈帧(Stack Frame)。
+- 栈帧是一个内存区块，是一个数据集，维系着方法执行过程中的各种数据信息。
+
+#### 栈的运行原理
+
+- JVM直接对Java栈的操作只有两个，就是对栈帧的`压栈`和出栈，遵循“`先进后出`”/“`后进先出`”原则。
+- 在一条活动线程中，一个时间点上，只会有一个活动的栈帧。即只有当前正在执行的方法的栈帧( 栈顶栈帧)是有效的，这个栈帧被称为`当前栈帧(Current Frame)` ，与当前栈帧相对应的方法就是`当前方法(Current Method)`，定义这个方法的类就是`当前类(Current Class)`
+- 执行引擎运行的所有字节码指令只针对当前栈帧进行操作。
+- 如果在该方法中调用了其他方法，对应的新的栈帧会被创建出来，放在栈的顶端，成为新的当前帧。
+
+```markdown
+- 不同线程中所包含的栈帧是不允许存在相互引用的，即不可能在一个栈帧之中引用另外一个线程的栈帧。
+
+- 如果当前方法调用了其他方法，方法返回之际，当前栈帧会传回此方法的执行结果给前一个栈帧，接着，虚拟机会丢弃当前栈帧，使得前一个栈帧重新成为当前栈帧。
+
+- Java方法有两种返回函数的方式，一种是正常的函数返回，使用return指令;另外一种是抛出异常。不管使用哪种方式，都会导致栈帧被弹出。
+```
+
+#### 栈桢的内部结构
+
+每个栈帧中存储着:
+
+- `局部变量表(Local variables)`
+- `操作数栈(operand Stack) (或表达式栈)`
+- 动态链接(Dynamic Linking) ( 或指向运行时常量池的方法引用)
+- 方法返回地址(Return Address) (或方法正常退 出或者异常退出的定义)
+- 一些附加信息
+
+![image-20210407155909926](https://gitee.com/ycfan/images/raw/master/img/image-20210407155909926.png)
+
+
+
+```markdown
+# 局部变量表
+- 局部变量表也被称之为局部变量数组或本地变量表
+
+- 定义为一个数字数组，主要用于存储方法参数和定义在方法体内的局部变量,这些数据类型包括各类基本数据类型、对象引用(reference) ，以及returnAddress类型。
+
+- 由于局部变量表是建立在线程的栈上，是线程的私有数据，因此不存在数据安全问题
+
+- 局部变量表所需的容量大小是在编译期确定下来的，并保存在方法的Code属性的maximum local variables数据项中。在方法运行期间是不会改变，局部变量表的大小的。
+
+- 方法嵌套调用的次数由栈的大小决定。一般来说，栈越大，方法嵌套调用次数越多。对一个函数而言，它的参数和局部变量越多，使得局部变量表膨胀，它的栈帧就越大，以满足方法调用所需传递的信息增大的需求。进而函数调用就会占用更多的栈空间，导致其嵌套调用次数就会减少。
+
+- 局部变量表中的变量只在当前方法调用中有效。在方法执行时，虚拟机通过使用局部变量表完成参数值到参数变量列表的传递过程。当方法调用结束后，随着方法栈帧的销毁，局部变量表也会随之销毁。
+```
+
+##### 关于Slot的理解
+
+参数值的存放总是在局部变量数组的index0开始，到数组长度-1的索引结束。
+
+局部变量表，最基本的存储单元是Slot (变量槽)
+
+局部变量表中存放编译期可知的各种基本数据类型(8种)，引用类型(reference)，returnAddress 类型的变量。
+
+在局部变量表里，32位以内的类型只占用一个slot (包括returnAddress类型)，64位的类型(long和double)占用两个slot。
+➢byte、short 、char在存储前被转换为int，boolean 也被转换为int，0表示false ，非0表示true。
+➢long和double 则占据两个Slot。
+
+JVM会为局部变量表中的每-一个slot都分配一个访问索引， 通过这个索引即可成功访问到局部变量表中指定的局部变量值
+当一个实例方法被调用的时候，它的方法参数和方法体内部定义的局部变量将会`按照顺序被复制`到局部变量志中的每一个slot上
+
+`如果需要访问局部变量表中一个64bit的局部变量值时，只需要使用前一一个索引即可`。(比
+如:访问1ong或double类型变量)
+
+如果当前帧是由构造方法或者实例方法创建的，那么`该对象引用this将会存放在index为0的slot处`，其余的参数按照参数表顺序继续排列。
+
+> ！！！因为静态方法的局部变量表中没有存放`this`引用所以不能使用`this`
+
+<img src="https://gitee.com/ycfan/images/raw/master/img/image-20210407162822471.png" alt="image-20210407162822471" style="zoom:50%;" />
+
+#### Slot的重复利用
+
+栈帧中的局部变量表中的槽位是可以重用的，如果一个局部变量过了其作用域，那么在其作用域之后申明的新的局部变量就很有可能会复用过期局部变量的槽位，从而达到节省资源的目的。
+
+```java
+public void test() {
+  int a = 0;
+  {
+    int b = 0;
+    b = a + 1;
+  }
+  // 变量c使用之前已经销毁的变量b占据的slot位置
+  int c = a + 1;
+}
+```
+
+<img src="../../../../Library/Application Support/typora-user-images/image-20210407164528798.png" alt="image-20210407164528798" style="zoom:50%;" />
+
+![image-20210407165300741](../../../../Library/Application Support/typora-user-images/image-20210407165300741.png)
+
+#### 静态变量与局部变量的对比
+
+参数表分配完毕之后，再根据方法体内定义的变量的顺序和作用域分配。
+
+我们知道类变量表有两次初始化的机会，第一次是在“`准备阶段`”，执行系统初始化，对类变量设置零值，另一次则是在“`初始化`”阶段，赋予程序员在代码中定义的初始值。
+
+和类变量初始化不同的是，局部变量表不存在系统初始化的过程，这意味着一旦定义了局部变量则必须人为的初始化，否则无法使用。
+
+
+
+#### 补充说明
+
+在栈帧中，与性能调优关系最为密切的部分就是前面提到的局部变量表。在方法执行时，虚拟机使用局部变量表完成方法的传递。
+
+局部变量表中的变量也是重要的垃圾回收根节点，只要被局部变量表中直接或间接引用的对象都不会被回收。
+
+#### 操作数栈（Operand Stack）
+
+每一个独立的栈帧中除了包含局部变量表以外，还包含一个后进先出(Last- In-First-Out)的操作数栈，也可以称之为表达式栈(Expression Stack) 。
+
+操作数栈，在方法执行过程中，根据字节码指令，往栈中写入数据或提取数据，即入栈(push) /出栈(pop)。
+➢某些字节码指令粗值压入操作数栈，其余的字节码指令将操作数取出栈。使用它们后再把结果压入栈。
+➢比如:执行复制、交换、求和等操作
+
+操作数栈，`主要用于保存计算过程的中间结果，同时作为计算过程中变量临时的存储空间。`
+
+操作数栈就是JVM执行引擎的一个工作区，当一个方法刚开始执行的时候，一个新的栈帧也会随之被创建出来，`这个方法的操作数栈是空的。`
+
+每一个操作数栈都会拥有一个明确的栈深度用于存储数值，其所需的最大深度在编译期就定义好了，保存在方法的Code属性中，为max_ stack的值。
+
+栈中的任何一个元素都是可以任意的Java数据类型。
+➢32bit的类型占用一个栈单位深度.
+➢64bit的类型占用两个栈单位深度
+操作数栈`并非采用访问索引的方式来进行数据访问的`，而是只能通过标准的入栈(push)和出栈(pop)操作来完成一次数据访问。
+
+`如果被调用的方法带有返回值的话，其返回值将会被压入当前栈帧的操作数栈中`，并更新PC寄存器中下一条需要执行的字节码指令。
+操作数栈中元素的数据类型必须与字节码指令的序列严格匹配，这由编译器在编译器期间进行验证，同时在类加载过程中的类检验阶段的数据流分析阶段要再次验证。
+
+另外，我们说Java虚拟机的`解释引擎是基于栈的执行引擎`，其中的栈指的就是操作数栈。
+
+#### 动态链接（或指向运行时常量池的方法引用）
+
+每一个栈帧内部都包含一个指向`运行时常量池中该栈帧所属方法的引用`。包含这个引用的目的就是为了支持当前方法的代码能够实现`动态链接(Dynamic Linking)` 。比如: invokedynamic指令
+
+在Java源文件被编译到字节码文件中时，所有的变量和方法引用都作为符号引用( Symbolic Reference) 保存在class文件的常量池里。比如：描述一个方法调用了另外的其他方法时，就是通过常量池中指向方法的符号引用来表示的，那么`动态链接的作用就是为了将这些符号引用转换为调用方法的直接引用。`
+
+#### 栈顶缓存(ToS，Top-of-Stack Cashing)
+
+前面提过，基于栈式架构的虚拟机所使用的零地址指令更加紧凑，但完成一项操作的时候必然需要使用更多的入栈和出栈指令，这同时也就意味着将需要更多的指令分派( instruction dispatch)次数和内存读/写次数。
+
+由于操作数是存储在内存中的，因此频繁地执行内存读/写操作必然会影响执行速度。为了解决这个问题，HotSpot JVM的设计者们提出了`栈顶缓存(ToS，Top-of-Stack Cashing)`技术，**将栈项元素全部缓存在物理CPU的寄存器中，以此降低对内存的读/写次数，提升执行引擎的执行效率。**
+
+#### 方法调用
+
+在JVM中，将符号引用转换为调用方法的直接引用与方法的绑定机制相关。
+
+静态链接:
+当一个字节码文件被装载进JVM内部时，如果被调用的`目标方法在编译期可知`，且运行期保持不变时。这种情况下将调用方法的符号引用转换为直接引用的过程称之为静态链接。
+
+动态链接:
+如果`被调用的方法在编译期无法被确定下来`，也就是说，只能够在程序运行期将调用方法的符号引用转换为直接引用，由于这种引用转换过程具备动态性，因此也就被称之为动态链接。
+
+
+
+对应的方法的绑定机制为:`早期绑定(Early Binding)`和晚期绑定(Late Binding) 。绑定是一个字段、方法或者类在符号引用被替换为直接引用的过程，这仅仅发生一次。
+
+`早期绑定:`
+早期绑定就是指被调用的`目标方法如果在编译期可知，且运行期保持不变`时，即可将这个方法与所属的类型进行绑定，这样一来，由于明确了被调用的目标方法究竟是哪一个，因此也就可以使用静态链接的方式将符号引用转换为直接引用。
+
+晚期绑定:
+如果`被调用的方法在编译期无法被确定下来，只能够在程序运行期根据实际的类型绑定相关的方法`，这种绑定方式也就被称之为晚期绑定。
+
+
+
+随着高级语言的横空出世，类似于Java一样的基于而向对象的编程语言如今越来越多，尽管这类编程语言在语法风格.上存在一-定的差别，但是它们彼此之间始终保持着一个共性，那就是都支持封装、继承和多态等而向对象特性，既然`这一类的编程语言具备多态特性，那么自然也就具备早期绑定和晚期绑定两种绑定方式。`
+
+Java中任何一个普通的方法其实都具备虚函数的特征，它们相当于C++语言中的虚函数(C++中则需要使用关键字virtual来显式定义)。如果在Java程序中不希望某个方法拥有虚函数的特征时，则可以使用关键字final来标记这个方法。
+
+##### 虚方法和非虚方法
+
+非虚方法:
+如果方法在编译期就确定了具体的调用版本，这个版本在运行时是不可变的。这样的方法称为`非虚方法`。
+
+静态方法、私有方法、final方法、实例构造器、父类方法都是非虚方法。
+
+其他方法称为虚方法。
+
+
+
+虚拟机中提供了以下几条方法调用指令:
+
+- 普通调用指令:
+
+1. `invokestatic: 调用静态方法，解析阶段确定唯一方法版本`
+2. `invokespecial: 调用<init>方法、私有及父类方法，解析阶段确定唯一方法版本`
+3. invokevirtual: 调用所有虛方法
+4. invokeinterface: 调用接口方法
+-	动态调用指令:
+5. invokedynamic:动态解析出需要调用的方法，然后执行
+
+前四条指令固化在虚拟机内部，方法的调用执行不可人为干预，而invokedynamic指令则支持由用户确定方法版本。其中`invokestatic指令和invokespecial指令调用的方法称为非虚方法，其余的(final修饰的除外)称为虚方法。`
+
+> final修饰的方法invokevirtual
+
+#### 关于invokedynamic指令
+
+JVM字节码指令集一直比较稳定，一直到Java7中才增加 了一个invokedynamic指令，这是`Java为了实现「动态类型语言」支持而做的一种改进。`
+
+但是在Java7中并没有提供直接生成invokedynamic指令的方法，需要借助ASM这种底层字节码工具来产生invokedynamic指令。`直到Java8的Lambda表达式的出现，invokedynamic指令的生成，在Java中才有了直接的生成方式。`
+
+Java7中增加的动态语言类型支持的本质是对Java虚拟机规范的修改，而不是对Java语言规则的修改，这一块相对来讲比较复杂，增加了虚拟机中的方法调用，最直接的受益者就是运行在Java平台的动态语言的编译器。
+
+#### 动态类型语言和静态类型语言
+
+动态类型语言和静态类型语言两者的区别就在于对类型的检查是在编译期还是在运行期，满足前者就是静态类型语言，反之是动态类型语言。
+
+说的再直白一一点就是，`静态类型语言是判断变量自身的类型信息;动态类型语言是判断变量值的类型信息，变量没有类型信息，变量值才有类型信息，`这是动态语言的一个重要特征。
 
 ### 本地方法栈（Native Method Stacks）
 
