--- a/Java虚拟机/垃圾收集器与内存分配策略.md
+++ b/Java虚拟机/垃圾收集器与内存分配策略.md
@@ -165,7 +165,71 @@ obj = null;
 
 
 ```java
+public class PhantomReferenceTest {
 
+    public static ReferenceQueue<PhantomReferenceTest> phantomQueue;
+
+    public static PhantomReferenceTest obj;
+
+    static class CheckRefQueue extends Thread{
+        @Override
+        public void run() {
+            while (true) {
+                if (phantomQueue != null) {
+                    try {
+                        if (phantomQueue.remove() != null) {
+                            System.out.println("追踪垃圾回收：PhantomReferenceTest实例被GC了");
+                        }
+                    } catch (InterruptedException e) {
+                        e.printStackTrace();
+                    }
+                }
+                System.out.println("------");
+            }
+        }
+    }
+
+    @Override
+    protected void finalize() throws Throwable {
+        super.finalize();
+        System.out.println("当前finalize方法调用");
+        obj = this;
+    }
+
+    public static void main(String[] args) throws InterruptedException {
+        Thread t = new CheckRefQueue();
+        t.setDaemon(true);
+        t.start();
+        phantomQueue = new ReferenceQueue<>();
+        obj = new PhantomReferenceTest();
+
+        PhantomReference<PhantomReferenceTest> phantomReference = new PhantomReference<>(obj, phantomQueue);
+
+        phantomReference.get();
+        // 去除强引用
+        obj = null;
+        // 第一次进行GC，由于对象可复活，GC无法回收对象
+        System.gc();
+
+        TimeUnit.SECONDS.sleep(1);
+
+        if (obj == null) {
+            System.out.println(" obj 是 null");
+        } else {
+            System.out.println(" obj 不是 null");
+        }
+        System.out.println("第二次 GC");
+        obj = null;
+        System.gc();
+        TimeUnit.SECONDS.sleep(1);
+
+        if (obj == null) {
+            System.out.println(" obj 是 null");
+        } else {
+            System.out.println(" obj 不是 null");
+        }
+    }
+}
 ```
 
 ### 终结器引用
